# test-image-text-gemini

./: .gitignore  README.md  README_SISTEMA_RAG.md  RESUMO_ARQUIVOS_CRIADOS.md  config.py  exemplo_uso.py  image_metadata_from_folder.pkl  instalar.sh  main.py  multimodal_qa_with_rag_utils.py  multimodal_rag_complete.py  project_test_multimodal_RAG.ipynb  pyproject.toml  updated_building_DIY_multimodal_qa_system_with_mRAG.ipynb
docs/: API.md
